--- a/style.css
+++ b/style.css
@@ -8,33 +8,32 @@
 }
 
 body {
-  padding: 20px;
+  padding: 50px 30px 0;
   background-color: black;
   color: greenyellow;
+  background-color: black;
 }
 
-input::-webkit-outer-spin-button,
-input::-webkit-inner-spin-button {
-  -webkit-appearance: none;
-  margin: 0;
-}
-
-input[type=number] {
-  -moz-appearance: textfield;
-  padding: 5px;
-  font-size: 1.2rem;
-  background: none;
-  border: none;
-  border-bottom: 1px solid greenyellow;
-  width: 15px;
-  outline: none;
-  color: greenyellow;
+body:after {
+  content: '';
+  background-image: url('./glitch.gif');
+  background-size: cover;
+  opacity: 0.2;
+  position: absolute;
+  inset: 0;
+  pointer-events: none;
 }
 
 p {
   margin-bottom: 10px;
+  line-height: 30px;
 }
 
-.invisible {
-  display: none;
+ul li {
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+  color: rgb(193, 59, 255);
 }
